# mavconn

./: .gitignore  README
cmake/: BuildConfig.cmake  BuildConfigGCC.cmake  FindMAVLINK.cmake  FindOpenCV.cmake  FindROS.cmake  FindXMU.cmake  InstallUtilities.cmake  LibraryConfig.cmake  SourceFileUtilities.cmake
cmake/config/: CMakeLists.txt  Calib.cal  PointGreyFirefly.cal.mav02  PointGreyFirefly.cal.mav03  PointGreyFirefly.cal.rgb  SLAMCam.cal  artk_marker_100_5.cfg  artk_marker_300_5.cfg  artk_marker_default.cfg  artk_markerboard_large.cfg  artk_markers.conf  calib_imu_stereo_rig.scf  calib_imu_stereo_rig_lionel.scf  calib_omnidirectional_petri.txt  calib_results_gim_hee_paper.txt  calib_stereo_alpha_down.scf  calib_stereo_bravo_down.scf  calib_stereo_bravo_front.scf  comp1-global.cfg  comp1-markerboard-bottom.cfg  comp1-markerboard-left.cfg  comp1-markerboard-middle.cfg  comp1-markerboard-right.cfg  comp1-markerboard-top.cfg  comp1-markerboard-total.cfg  comp2-global.cfg  comp2-start.cfg  comp3-house.cfg  configWorld1.cfg  configWorld2.cfg  configWorld3.cfg  demo-multitracker.sh  demo-patternrec.sh  demo-tracker.sh  demo-waypoint.txt  eccv2010-demo-board.cfg  firefly_mv_4mm_default.cal  firefly_mv_8452075_stereo.cal  firefly_mv_8452079.cal  firefly_mv_8452079_stereo.cal  (+46 more)
cmake/media/: CMakeLists.txt
cmake/media/characters/: CMakeLists.txt
src/: CMakeLists.txt  MAVCONNConfig.h.in  MAVCONNPathConfig.h.in  camera_spez2.h  doxygen-mainpage.h  mavconn.h  rospathsetup.sh
src/comm/: CMakeLists.txt  PxTransform.cc  PxTransform.h  PxVicon.cc  PxVicon.h  ViconClient.h  gpsserial.cc  imagestreamer.cc  px_gpsd.cc  px_imagestreamer.cc  px_mavlinkserial.cc  px_ping.cc  px_udplink.cc  px_vicon_bridge.cc
src/comm/lcm/: CMakeLists.txt  camera_image_message_t.c  camera_image_message_t.h  camera_image_message_t.lcm  gl_overlay_message_t.c  gl_overlay_message_t.h  gl_overlay_message_t.lcm  lcmreceive.cc  mavlink_message_t.c  mavlink_message_t.h  mavlink_message_t.lcm  obstacle_map_message_t.c  obstacle_map_message_t.h  obstacle_map_message_t.lcm  point_cloud_message_t.c  point_cloud_message_t.h  point_cloud_message_t.lcm  quad_mesh_message_t.c  quad_mesh_message_t.h  quad_mesh_message_t.lcm  target_position_message_t.c  target_position_message_t.h  target_position_message_t.lcm  texture_facet_t.c  texture_facet_t.h  texture_facet_t.lcm  texture_map_message_t.c  texture_map_message_t.h  texture_map_message_t.lcm  virtual_scan_message_t.c  virtual_scan_message_t.h  virtual_scan_message_t.lcm
src/comm/messenger/: CMakeLists.txt  px_messenger.cc
src/comm/tools/: CMakeLists.txt  i2cusb.cc
src/core/: CMakeLists.txt  ParamClientCallbacks.h  PxParamClient.h  process_template.cpp  px_core.cc
src/core/corelib/: CMakeLists.txt  Clock.cc  Clock.h  Core.cc  Core.h  Debug.h  Exception.cc  Exception.h  SGThread.cxx  SGThread.hxx  SignalHandler.cc  SignalHandler.h  Sleep.cc  Sleep.h
src/core/corelib/timer/: OgreTimer.Unix.cpp  OgreTimer.h  Timer.h
src/core/ros_control/: CMakeLists.txt  NOTES_CS  stack.xml
src/core/ros_control/visualization/: CMakeLists.txt  manifest.xml  rviz_config.vcg
src/core/ros_control/visualization/src/: px_house.cc  px_rviz.cc  wp_test_send.cc
src/core/ros_core/: CMakeLists.txt
src/core/timer/: OgreTimer.WIN32.cpp  OgreTimerImp.GLX.h  OgreTimerImp.OSX.h  OgreTimerImp.WIN32.h
src/core/watchdog/: CMakeLists.txt  Command.cc  Command.h  Main.cc  Process.cc  Process.h  Watchdog.cc  Watchdog.h  WatchdogControl.cc  WatchdogControl.h
src/examples/: CMakeLists.txt  PxExample.cc  PxExample.h
src/examples/lcm_examples/: CMakeLists.txt  lcmreceive.cc  lcmsend.cc
src/examples/ros_examples/: CMakeCache.txt  CMakeLists.txt  stack.xml
src/examples/ros_examples/rviz_example/: CMakeCache.txt  CMakeLists.txt  manifest.xml
src/examples/ros_examples/rviz_example/src/: param_get.cpp  param_set.cpp  service_get.cpp  service_set.cpp  topic_get.cpp  topic_set.cpp
src/examples/ros_examples/rviz_example/src/rviz_example/srv/: _SetMarker.py  __init__.py
src/examples/ros_examples/rviz_example/srv/: SetMarker.srv
src/examples/ros_examples/rviz_example/srv/cpp/rviz_example/: SetMarker.h
src/interface/: CMakeLists.txt
src/interface/camera/: CMakeLists.txt  Camera.cc  Camera.h  CameraInput.cc  CameraOperations.cc  CameraOperations.h  DC1394Input.cc  DC1394Input.h  DisplayOutput.cc  DisplayOutput.h  FPSTimer.cc  FPSTimer.h  FrameInput.cc  FrameInput.h  FrameOutput.cc  FrameOutput.h  IpcInput.cc  IpcInput.h  LcmInput.cc  LcmInput.h  LcmOutput.cc  LcmOutput.h  Main.cc  PauseInput.cc  PauseInput.h  SequenceInput.cc  SequenceInput.h  SequenceOutput.cc  SequenceOutput.h  VideoInput.cc  VideoInput.h  VideoOutput.cc  VideoOutput.h
src/interface/camera/calibration/: CMakeLists.txt  PxCameraCalibration.cc  PxCameraCalibration.h  PxCameraCalibrationOmnidirectional.cc  PxCameraCalibrationOmnidirectional.h  PxCameraCalibrationStandard.cc  PxCameraCalibrationStandard.h  PxCameraStereoCalibration.cc  PxCameraStereoCalibration.h
src/interface/shared_mem/: PxSharedMemClient.h  PxSharedMemServer.h
src/planning/: CMakeLists.txt  PxVector3.h  px_waypointplanner.cc
