INCLUDE_DIRECTORIES(.
  ${GLIB2_MAIN_INCLUDE_DIR}
  ${GLIB2_INTERNAL_INCLUDE_DIR}
  ${GTHREAD2_MAIN_INCLUDE_DIR}
)

IF(DC1394_FOUND)
INCLUDE_DIRECTORIES(
  ${GLIBTOP_INCLUDE_DIR}
)

PIXHAWK_EXECUTABLE(px_core px_core.cc)
PIXHAWK_LINK_LIBRARIES(px_core
  lcmext
  ${Boost_PROGRAM_OPTIONS_LIBRARY}
  ${GLIBTOP_LIBRARY}
)

ENDIF(DC1394_FOUND)

ADD_SUBDIRECTORY(corelib)
ADD_SUBDIRECTORY(watchdog)
ADD_SUBDIRECTORY(ros_core)
ADD_SUBDIRECTORY(ros_control)
