INCLUDE_DIRECTORIES(.
  ${GLIB2_MAIN_INCLUDE_DIR}
  ${GLIB2_INTERNAL_INCLUDE_DIR}
  ${GTHREAD2_MAIN_INCLUDE_DIR}
)

IF(DC1394_FOUND)
INCLUDE_DIRECTORIES(
  ${GLIBTOP_INCLUDE_DIR}
)

PIXHAWK_EXECUTABLE(px_system_control px_core.cc)
PIXHAWK_LINK_LIBRARIES(px_system_control
  mavconn_lcm
  ${GLIBTOP_LIBRARY}
)

ENDIF(DC1394_FOUND)

ADD_SUBDIRECTORY(watchdog)
