INCLUDE_DIRECTORIES(.
  ${GLIB2_MAIN_INCLUDE_DIR}
  ${GLIB2_INTERNAL_INCLUDE_DIR}
  ${GTHREAD2_MAIN_INCLUDE_DIR}
)

INCLUDE_DIRECTORIES(
  ${GLIBTOP_INCLUDE_DIR}
)

PIXHAWK_EXECUTABLE(px_system_control px_core.cc)
PIXHAWK_LINK_LIBRARIES(px_system_control
  mavconn_lcm
  ${GLIB2_LIBRARY}
  ${GTHREAD2_LIBRARY}
  ${GLIBTOP_LIBRARY}
)

ADD_SUBDIRECTORY(watchdog)
